se agregó parrafo desde la rama 1

--- a/pagina1.html
+++ b/pagina1.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Bienvenidos a mi Página</h1>
     <hr>
+    <h2>Desde la Rama 1</h2>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia unde, dicta suscipit dolorem omnis ipsa! Quasi dicta laboriosam quae dolor rerum, aliquam qui repudiandae incidunt dolorem ad asperiores, obcaecati harum.
+    </p>
 </body>
 </html>
